# docs/swagger.yaml
@@ -18,6 +18,19 @@ definitions:
     - tags
     - title
     type: object
+  main.CreateUserTokenPayload:
+    properties:
+      email:
+        maxLength: 255
+        type: string
+      password:
+        maxLength: 72
+        minLength: 3
+        type: string
+    required:
+    - email
+    - password
+    type: object
   main.RegisterUserPayload:
     properties:
       email:
@@ -162,6 +175,37 @@ info:
   title: Blog API
   version: "1.0"
 paths:
+  /authentication/token:
+    post:
+      consumes:
+      - application/json
+      description: Registers a token for a user
+      parameters:
+      - description: User credentials
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.CreateUserTokenPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Token
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: create a token
+      tags:
+      - authentication
   /authentication/user:
     post:
       consumes:
